# checkthat-2025-swd

./: .gitignore  README.md  checkthat-retrieval.yml
subtask-4a/: compute-metrics.py  (+5 more)
subtask-4b/: augment_data.py  bm25.py  bm25_pytorch.py  pyproject.toml  rerank.py  sbert_bi_cross_encoder.py  subtask4b_00_baseline.py  subtask4b_01_mvp.py  subtask4b_02_data_augmentation.py  subtask4b_03_chg_rerank_model.py  subtask4b_bm25_answerdotai_rerankers.ipynb  subtask4b_bm25_rerank_gpt_crossencoder.ipynb  subtask4b_bm25_rerank_lightgbm.ipynb  subtask4b_bm25_rerank_raink.ipynb  subtask4b_bm25_sbert_crossencoder.ipynb  subtask4b_bm25_t5_dev_testing.ipynb  subtask4b_bm25_t5_used_for_submission.ipynb  subtask4b_data_augmentation.ipynb  subtask4b_eda.ipynb  subtask4b_eda_shuyu.ipynb  subtask4b_splade_sbert_crossencoder.ipynb  train_bi_encoder.py  util.py
subtask-4b/.virtual_documents/: subtask4b_data_augmentation.ipynb
subtask-4b/results/: subtask4b_00_baseline.txt  subtask4b_01_mvp.txt  subtask4b_02_data_augmentation_dev.txt  subtask4b_02_data_augmentation_dev_concat_all.txt  subtask4b_02_data_augmentation_dev_concat_english_formal.txt  subtask4b_02_data_augmentation_dev_concat_formal.txt  subtask4b_02_data_augmentation_dev_english_formal.txt  subtask4b_02_data_augmentation_dev_formal.txt  subtask4b_02_data_augmentation_dev_keywords.txt  subtask4b_03_chg_rerank_model_cross-encoder-ms-marco-MiniLM-L-6-v2.txt  subtask4b_03_chg_rerank_model_tomaarsen-reranker-NeoBERT-gooaq-bce.txt  subtask4b_03_chg_rerank_model_tomaarsen-reranker-msmarco-MiniLM-L12-H384-uncased-lambdaloss.txt
(+15 files in other folders)
